# MuseumAgent_Server

./: .gitignore  2.0.0  AUDIO_SILENCE_DIAGNOSIS.md  AUDIO_STREAMING_OPTIMIZATION.md  Architecture_Update_Notes.md  BUSINESS_FRAMEWORK_ANALYSIS.md  CLEANUP_REPORT.md  CONFIG_DRIVEN_PROMPT_ENGINEERING_REPORT.md  CONTROL_PANEL_DEPLOYMENT_READY.md  CONTROL_PANEL_ENV_CLEANUP.md  CONTROL_PANEL_PATH_CHANGE.md  Client_Capability_Configuration_Guide.md  Command_Set_Management_Analysis.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PATH_ANALYSIS.md  DEPLOYMENT_SUMMARY.md  DIALOGUE_CONTENT_CONSISTENCY_IMPROVEMENT_REPORT.md  Description.md  DevelopmentDocumentation.md  Dynamic_Command_Set_Implementation_Plan.md  Enhanced_Config_Panel_Documentation.md  FILE_LIST.md  FINAL_CLEANUP_REPORT.md  FINAL_OPTIMIZATION_SUMMARY.md  FIX_NORMAL_CHAT_SUPPORT_REPORT.md  File_Structure_Analysis.md  IMPLEMENTATION_REPORT.md  Implementation_Progress_Report.md  Lightweight_Session_Management_Design.md  MODULE_INTERFACE_RULES.md  Museum_Agent_System_Architecture_Analysis.md  NGINX_500_FIX.md  NewOptimizedArchitecture.mermaid  OptimizedArchitecture.md  PATH_CORRECTIONS.md  PATH_UPDATE_SUMMARY.md  POTENTIAL_ISSUES_REPORT.md  PROMPT_ENGINEERING_REFACTOR_REPORT.md  (+110 more)
Documents/: CommunicationProtocol.md  TEMP_FILES_CLEANUP_REPORT.md
Test/: DESKTOP_PET_OPTIMIZATION_REPORT.md  FALLBACK_REMOVAL_IMPLEMENTATION_REPORT.md  LLM_COMMUNICATION_ANALYSIS_REPORT.md  PROMPT_ENGINEERING_IMPROVEMENT_REPORT.md  actual_network_test.py  analyze_llm_communication_raw.py  comparative_success_analysis.py  content_behavior_analysis.py  content_preservation_test.py  debug_logging_test.py  direct_forwarding_test.py  enhanced_desktop_pet_test.py  full_api_test.py  (+11 more)
semantic_retrieval_client_package/: CHANGELOG.md  INSTALLATION.md  MANIFEST.in  README.md  example_usage.py  pyproject.toml  setup.py  test_package.py
semantic_retrieval_client_package/docs/: API_REFERENCE.md  DEVELOPER.md
(+701 files in other folders)
